syntax = "proto3";

package pb;

option go_package="IMChat/pb";

message AddContactRequest {
    int64 owner_id = 1;
    int64 target_id = 2;
    int32 type = 3;
}

message AddContactResponse {
    string message = 1;
}